# Zombie-Labyrinth

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.py
resources/levels/: bank.lvl  demo.lvl
src/: abstract_game_objects.py  ai.py  camera.py  constants.py  engine.py  game_object.py  game_objects.py  geometry.py  global_variables.py  human.py  input.py  levels.py  living_being.py  living_beings.py  main.py  preferences.py  resources.py  weapons.py  zombie.py
zombie_labyrinth/: ai.py  camera.py  constants.py  engine.py  game_objects.py  geometry.py  global_variables.py  input.py  levels.py  living_beings.py  main.py  preferences.py  resources.py  weapons.py
